# intramind-vector-db-service

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  PROJECT_ROADMAP.md  README.md  docker-compose.yml  requirements.txt
config/: appSettings.Local.json.example  appSettings.json  env.example
scripts/: example.py  generate_proto.bat  generate_proto.sh
src/service/: server.py  service_auth.py
src/service/middleware/: __init__.py  grpc_interceptors.py
src/service/protos/: README.md  __init__.py  vector_service.proto
src/service/protos/Core/: __init__.py  collections_messages.proto  collections_service.proto  documents_messages.proto  documents_service.proto  health_messages.proto  health_service.proto  search_messages.proto  search_service.proto
src/service/servicers/: __init__.py  vector_db_servicer.py
src/weaviate_client/: __init__.py  bootstrap.py  client.py  collections.py  config.py  keyvault_client.py  models.py  queries.py  telemetry.py
tests/: test_grpc_service.py  test_weaviate_connection.py
vector-db-contracts/: .gitignore  DEPLOYMENT.md  GETTING_STARTED.md  README.md  VectorDB.Contracts.sln
vector-db-contracts/.github/workflows/: publish-nuget.yml  publish-python-pypi.yml  publish-python-testpypi.yml  publish-to-dev.yml  publish-to-prod.yml  publish-to-uat.yml  test-nuget-package.yml  test-python-package.yml
vector-db-contracts/python/: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
vector-db-contracts/python/scripts/: build_package.py  generate_protos.py
vector-db-contracts/python/vectordb_contracts/: __init__.py
vector-db-contracts/src/VectorDB.Contracts/: VectorDB.Contracts.csproj
vector-db-contracts/src/VectorDB.Contracts/Protos/: README.md  vector_service.proto
vector-db-contracts/src/VectorDB.Contracts/Protos/Core/: collections_messages.proto  collections_service.proto  documents_messages.proto  documents_service.proto  health_messages.proto  (+3 more)
