[build-system]
requires = [
    "setuptools>=65.0",
    "wheel",
    "grpcio-tools>=1.60.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "vectordb-contracts"
dynamic = ["version"]
description = "Protocol Buffer contracts for Vector Database gRPC Service"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Jess Kelly"},
]
keywords = ["grpc", "protobuf", "vectordb", "weaviate", "contracts", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "grpcio>=1.60.0,<2.0.0",
    "protobuf>=4.25.0,<6.0.0",
]

[project.optional-dependencies]
dev = [
    "grpcio-tools>=1.60.0,<2.0.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/JessKelly91/ai-vector-db-practice"
Repository = "https://github.com/JessKelly91/ai-vector-db-practice"
Issues = "https://github.com/JessKelly91/ai-vector-db-practice/issues"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["vectordb_contracts"]

[tool.setuptools.package-data]
vectordb_contracts = ["py.typed", "*.pyi"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

